@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020181014"
-#define public MagickPackageReleaseDate "snapshot-20181014"
+#define public MagickPackageVersionAddendum ".020181020"
+#define public MagickPackageReleaseDate "snapshot-20181020"
